<?xml version="1.0"?>
<package format="3">
  <name>turtlebot3_joy_teleop</name>
  <version>0.1.0</version>
  <description>Teleop TurtleBot3 via joystick or spacenav in C++</description>
  <maintainer email="radtarasov@gmail.com">ARDev1161</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_cmake</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
